# tests/Forge.ReferenceCatalog.Tests/openapi.v1.snapshot.json
@@ -28,6 +28,12 @@
       },
       "CreateCatalogItemRequest": {
         "properties": {
+          "createdBy": {
+            "type": [
+              "null",
+              "string"
+            ]
+          },
           "name": {
             "type": [
               "null",
